discussion/kv_engine/147944/147944_rev24_discussion.txt
======================================================================================================================
DESCRIPTION:

[Refactor]: Use folly::AsyncServerSocket for ServerSockets

Replace the old ServerSocket class with a new implementaion
which utilize folly::AsyncServerSocket

Change-Id: I520defc1deb345cb3c0fb3980e406f4781e34b32

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Trond Norbye
Date: 2021-06-14 12:32:28.000000000
Message: 
Uploaded patch set 24.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-06-14 13:13:30.000000000
Message: 
Patch Set 24: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/36854/ : FAILURE

Failure of GoogleTest "ShutdownTest.ShutdownAllowed":

<pre>
[ RUN      ] ShutdownTest.ShutdownAllowed
unknown file: error: C++ exception with description "MemcachedConnection::recvFrame(): Timed out after waiting 0ms for a response for SASL_AUTH" thrown in SetUp().
unknown file: error: C++ exception with description "MemcachedConnection::recvFrame(): Timed out after waiting 0ms for a response for SASL_AUTH" thrown in TearDown().
[  FAILED  ] ShutdownTest.ShutdownAllowed (4251 ms)
ShutdownTest.ShutdownAllowed
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/36854/ )

Timeout of a CTest test 353/407 Test #309: memcached_testapp.default.TransportProtocols/XattrTest ........................................................................} ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/36854/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9864/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/build-kv_engine-clang-tidy/tlm/deps/folly.exploded/include/folly/portability/GTest.h:32:10: error: "gtest/gtest.h" file not found [clang-diagnostic-error]
#include <gtest/gtest.h>
         ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9864/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/build-kv_engine-clang-tidy/tlm/deps/folly.exploded/include/folly/portability/GTest.h:32:10:
error: "gtest/gtest.h" file not found [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9864/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/8455/ : SUCCESS

http://cv.jenkins.couchbase.com/job/ming-test2/375/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/31487/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/11588/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/11436/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/11861/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/10517/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/19450/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
